--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.2",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-scripts-ts": "2.16.0",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-saga": "^0.16.0",
+    "typesafe-actions": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -19,6 +22,7 @@
     "@types/jest": "^23.3.1",
     "@types/node": "^10.5.6",
     "@types/react": "^16.4.7",
+    "@types/react-bootstrap": "^0.32.11",
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.6",
     "typescript": "^3.0.1"
