--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.16.0",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
@@ -25,6 +26,7 @@
     "@types/react-bootstrap": "^0.32.11",
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.6",
+    "@types/react-router-dom": "^4.3.0",
     "typescript": "^3.0.1"
   }
 }
