--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,8 @@
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.6",
     "@types/react-router-dom": "^4.3.0",
+    "@types/redux-logger": "^3.0.6",
+    "redux-logger": "^3.0.6",
     "typescript": "^3.0.1"
   }
 }
