--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "2.16.0",
+    "react-select": "^2.0.0",
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "typesafe-actions": "^2.0.4"
@@ -27,6 +28,7 @@
     "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.6",
     "@types/react-router-dom": "^4.3.0",
+    "@types/react-select": "^2.0.3",
     "@types/redux-logger": "^3.0.6",
     "redux-logger": "^3.0.6",
     "typescript": "^3.0.1"
