--- a/client/package.json
+++ b/client/package.json
@@ -66,6 +66,8 @@
     "@types/react-router-dom": "^4.3.0",
     "@types/react-select": "^2.0.3",
     "@types/redux-logger": "^3.0.6",
+    "@types/styled-components": "^3.0.1",
+    "babel-plugin-styled-components": "^1.7.1",
     "redux-logger": "^3.0.6",
     "typescript": "^3.0.1"
   },
@@ -116,6 +118,9 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      "babel-plugin-styled-components"
     ]
   },
   "eslintConfig": {
